--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       "three": "./libs/three.module.js",
       "@photo-sphere-viewer/core": "./libs/photo-sphere-viewer.module.js",
       "@photo-sphere-viewer/markers-plugin": "./libs/photo-sphere-viewer-markers.module.js",
-      "@photo-sphere-viewer/gyroscope-plugin": "https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin@5.7.1/index.module.js"
+      "@photo-sphere-viewer/gyroscope-plugin": "https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/gyroscope-plugin@5.13.3/index.module.js"
     }
   }
   </script>
@@ -50,7 +50,7 @@
       <div id="viewer"></div>
       <div id="welcome-overlay">
         <div class="welcome-content">
-          <img src="images/logo-itap.png" alt="Logo ITAP" style="max-width: 300px; margin: 0 auto 20px; display: block;">
+          <!-- img src="images/logo-itap.png" alt="Logo ITAP" style="max-width: 300px; margin: 0 auto 20px; display: block;" -->
           <h2>Bem-vindo ao Tour Interativo</h2>
           <p>Explore o ambiente de forma fácil e intuitiva.</p>
         </div>
